end-previous year

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400&display=swap"
@@ -26,9 +27,27 @@
         </div>
         <!-- end-banner-section -->
         <!-- start-previous year -->
+        <section class="previous-content">
+            <div class="child">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="child">
+                <h3 class="title-text">My failures of previous year</h3>
+                <p class="title-depiction">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
+        <!-- end-previous year -->
 
-        
+
     </main>
+    <script src="https://kit.fontawesome.com/d855f114ac.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
