--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             </div>
             <div class="child">
                 <h3 class="title-text">My failures of previous year</h3>
-                <p class="title-depiction">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <p class="title-depiction">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                    roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                    McClintock.</p>
                 <ul>
                     <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
                     <li><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
@@ -44,6 +46,40 @@
             </div>
         </section>
         <!-- end-previous year -->
+        <!-- start-My Plans -->
+        <section class="my-plans">
+            <h3 class="plans-title-text">My Plans</h3>
+            <div class="work-section">
+                <div class="work">
+                    <div class="work-img">
+                        <img src="images/icons/web.png" alt="">
+                        <h3 class="work-title">Web Development</h3>
+                        <p class="work-depiction">I want to start</p>
+                    </div>
+                </div>
+                <div class="work">
+                    <div class="work-img">
+                        <img src="images/icons/js.png" alt="">
+                        <h3 class="work-title">Javascript</h3>
+                        <p class="work-depiction">I want to start</p>
+                    </div>
+                </div>
+                <div class="work">
+                    <div class="work-img">
+                        <img src="images/icons/smoke.png" alt="">
+                        <h3 class="work-title">Smoking Habit</h3>
+                        <p class="work-depiction">I want to end</p>
+                    </div>
+                </div>
+                <div class="work">
+                    <div class="work-img">
+                        <img src="images/icons/ecom.png" alt="">
+                        <h3 class="work-title">ecommerce</h3>
+                        <p class="work-depiction">I want to start</p>
+                    </div>
+                </div>
+        </section>
+        <!-- end-My Plans -->
 
 
     </main>
