end-call-section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,19 @@
                 </div>
         </section>
         <!-- end-My Plans -->
+        <!-- start-call-section -->
+        <section class="call-section">
+            <div class="call-content">
+                <h3 class="call-text">
+                    Awlays keep a positive mindset
+                </h3>
+                <button class="btn-primary">Call Now</button>
+            </div>
+        </section>
+        <!-- end-call-section -->
+        <section class="divisor-150">
 
+        </section>
 
     </main>
     <script src="https://kit.fontawesome.com/d855f114ac.js" crossorigin="anonymous"></script>
