--- a/index.html
+++ b/index.html
@@ -91,10 +91,34 @@
         </section>
         <!-- end-call-section -->
         <section class="divisor-150">
-
         </section>
-
     </main>
+    <!-- start-footer -->
+    <footer class="footer">
+        <div class="footer-container">
+        <div class="Future footer-child">
+            <h3 class="footer-title">Future</h3>
+            <p class="footer-depiction">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered
+                alteration in some form, by injected humour, or randomised words</p>
+            <p class="footer-depiction">Email : info@gmail.com</p>
+            <p class="footer-depiction">Phone : 01500 00 00 00 </p>
+            <div class="social-icon">
+                <img src="images/icons/fb.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+                <img src="images/icons/youtube.png" alt="">
+            </div>
+
+        </div>
+        <div class="Subscribe footer-child">
+            <h3 class="footer-title2">Subscribe</h3>
+            <form action="">
+                <input class="input-box" type="text" placeholder="Enter your email">
+                <button class="btn-primary">Subscribe</button>
+            </form>
+        </div>
+    </div>
+    </footer>
     <script src="https://kit.fontawesome.com/d855f114ac.js" crossorigin="anonymous"></script>
 </body>
 
