--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <h3 class="footer-title2">Subscribe</h3>
             <form action="">
                 <input class="input-box" type="text" placeholder="Enter your email">
-                <button class="btn-primary">Subscribe</button>
+                <button class="btn-secondary">Subscribe</button>
             </form>
         </div>
     </div>
